# fixed-json

./: Cargo.toml  README.md  build.rs  qualirs.toml
benches/: parser.rs
examples/: example1.rs  example2.rs  example3.rs  example4.rs  serialize_basic.rs  serialize_nested.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: common.rs  read_array.rs  read_object.rs  validate_json.rs
src/: builder.rs  error.rs  lib.rs  model.rs  number.rs  parser.rs  serializer.rs  validator.rs
tests/: builder.rs  error.rs  json_test_suite.rs  model.rs  parser.rs  serializer.rs
